k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sesemmi
  namespace: sesemmi
spec:
  rules:
    - host: sesemmi.linkedmusic.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
